# pencil-code

src/: .config-files  Makefile  border_profiles.f90  boundcond.f90  cdata.f90  density.f90  deriv.f90  diagnostics.f90  dustdensity.f90  dustvelocity.f90  energy.h  entropy.f90  eos.h  eos_chemistry.f90  eos_chemistry_simple.f90  eos_fixed_ionization.f90  eos_idealgas.f90  eos_ionization.f90  eos_temperature_ionization.f90  equ.f90  forcing.f90  fourier_fftpack.f90  general.f90  gpu.h  gpu_astaroth.f90  gpu_astaroth_ansi.c  grid.f90  hydro.f90  hydro.h  hydro_kinematic.f90  hydro_potential.f90  hyperresi_strict_2nd.f90  hypervisc_strict_2nd.f90  lsode_for_chemistry.f90  magnetic.f90  messages.f90  mpicomm.f90  noeos.f90  nogpu.f90  nohydro.f90  (+19 more)
src/astaroth/: Makefile  gpu_astaroth.cc  loadStore.cc
src/astaroth/submodule/: .gitignore  CMakeLists.txt  README.md  autotune.csv  bitbucket-pipelines.yml  doxyfile  mesh_info.list  purge.sh  singlepass.ts  test_snapshot.csv
src/astaroth/submodule/acc-runtime/: .clang-format  CMakeLists.txt  README.md
src/astaroth/submodule/acc-runtime/Pencil/: prerequisites.h
src/astaroth/submodule/acc-runtime/acc/: CMakeLists.txt  ac.l  ac.y  ast.h  codegen.c  codegen.h  implementation copy.h  implementation.c  implementation.h  stencil_accesses.cpp  stencilgen copy.c  stencilgen.c
src/astaroth/submodule/acc-runtime/api/: CMakeLists.txt  acc_runtime.cu  acc_runtime.h  datatypes.h  errchk.h  hip.h  math_utils.h  random.cuh
src/astaroth/submodule/acc-runtime/samples/blur/: blur.ac
src/astaroth/submodule/acc-runtime/samples/mhd/: heat_conduction_kramers.h  mhdsolver.ac
src/astaroth/submodule/acc-runtime/samples/mhd/modular/: equ.h  fields.h
src/astaroth/submodule/acc-runtime/samples/mhd_4thord/: mhdsolver.ac
src/astaroth/submodule/acc-runtime/samples/mhd_modular/: mhdsolver.ac  smooth_kernel.ach  stencilgen.py
src/astaroth/submodule/acc-runtime/stdlib/: derivs.h  grid.h  integrators.h  operators.h
src/astaroth/submodule/acc-runtime/tests/: 0.ac  1.ac  2.ac  3.ac  4.ac  5.ac  6.ac  mhd.ac  syntaxtest.sh
src/astaroth/submodule/acc/pc_mhd_solver/: stencil_kernel.ac
src/astaroth/submodule/acc/pencil/: stencil_defines.h
src/astaroth/submodule/analysis/viz_tools/: deferred-render  on-the-fly-render  render_frames_deferred.batch  render_frames_on_the_fly.batch  render_slices  render_slices.py
src/astaroth/submodule/cmake/: configure_perfstubs.cmake
src/astaroth/submodule/config/: astaroth.conf  convection_kramers.conf
src/astaroth/submodule/config/romio/: README.md  lumi
src/astaroth/submodule/doc/Astaroth_API_specification_and_user_manual/: API_specification_and_user_manual.md
src/astaroth/submodule/include/: astaroth.h  astaroth_debug.h  astaroth_utils.h  timer_hires.h  user.h
src/astaroth/submodule/pilot/: README.md  astaroth-128.conf  astaroth-4096.conf  astaroth-512.conf  pilot-4096.sh  pilot-64.sh  pilot-8.sh  plot-collective.py  plot-distributed.py
src/astaroth/submodule/samples/ac-interpreter/: CMakeLists.txt  main.c
src/astaroth/submodule/samples/benchmark/: main.cc
src/astaroth/submodule/samples/benchmark-device/: CMakeLists.txt  main.c
src/astaroth/submodule/samples/benchmark-node/: CMakeLists.txt  main.c
src/astaroth/submodule/samples/blur/: CMakeLists.txt  main.c
src/astaroth/submodule/samples/boundcond_test/: CMakeLists.txt  main.cc
src/astaroth/submodule/samples/bwtest/: CMakeLists.txt  bwtest-benchmark.cu  bwtest-io.cu  bwtest-stencil.cu  bwtest.cu  common.h  plot.py
src/astaroth/submodule/samples/bwtest-mpi/: CMakeLists.txt  main.c
src/astaroth/submodule/samples/convection_kramers/: CMakeLists.txt  main.cc
src/astaroth/submodule/samples/cpptest/: main.cc
src/astaroth/submodule/samples/ctest/: main.c
src/astaroth/submodule/samples/devicetest/: CMakeLists.txt  main.cc
src/astaroth/submodule/samples/fortrantest/: CMakeLists.txt
src/astaroth/submodule/samples/heat-equation/: CMakeLists.txt  README.md  build.sh  heat-equation.ac  heat-equation.py  main.c
src/astaroth/submodule/samples/les/: CMakeLists.txt  README.md  analysis.py  build.sh  les-stencilgenerator.py  main.ac  main.ac.compressible  main.c  stencil.ach
src/astaroth/submodule/samples/mpi-io/: CMakeLists.txt  main.c
src/astaroth/submodule/samples/mpi-io-multithreaded/: CMakeLists.txt  main.cc
src/astaroth/submodule/samples/mpi_fullgriderror_test/: CMakeLists.txt  main.cc
src/astaroth/submodule/samples/mpi_reduce_bench/: main.cc
src/astaroth/submodule/samples/mpitest/: main.cc
src/astaroth/submodule/samples/multikerneltest/: CMakeLists.txt  fibonacci.ac  main.cc
src/astaroth/submodule/samples/pc-varfile-import/: CMakeLists.txt  main.c
src/astaroth/submodule/samples/plasma-meets-ai-workshop/: README.md  animate-snapshots.py  astaroth.conf  getting-started-with-astaroth.md
src/astaroth/submodule/samples/standalone/: autotest.cc  benchmark.cc  config_loader.cc  run.h  (+5 more)
src/astaroth/submodule/scripts/: gen_rundir.sh  genbenchmarks.py  old-genbenchmarks.py  run-device-benchmarks.py  run-microbenchmarks.py
src/astaroth/submodule/src/core/: CMakeLists.txt  astaroth.cc  astaroth_fortran.cc  astaroth_fortran.h  copy.h  debug.cc  decomposition.h  device.cc  grid.cc  grid_commdata_based.cc  node.cc  task.cc  task.h
src/astaroth/submodule/src/core/kernels/: CMakeLists.txt  boundconds.cuh  boundconds_miikka_GBC.cuh  kernels.cu  kernels.h  pack_unpack.cuh  packing.cuh  reductions.cuh  volume_copy.cuh
src/astaroth/submodule/src/utils/: CMakeLists.txt  config_loader.c  logging.c  memory.c  modelreduce.c  modelsolver-legacy-do-not-modify.c  modelsolver.cc  verification.c
src/experimental/: eos_idealgas_vapor.f90  hydro_ffreeMHDrel.f90  solid_cells_CGEO.f90  solid_cells_reactive.f90  test_eos_chemistry.f90
src/initial_condition/: centrifugal_balance.f90  dust-equilibrium.f90  hopf_kink.f90
src/obsolete/: nohydro_file.f90
src/scripts/: parse.py
src/special/: alphadisk.f90  newton_cooling.f90  photoelectric_dust.f90  rtime_phiavg.f90  shallow_water.f90
src/test_methods/: testfield_general.f90  testfield_z.f90
(+91 files in other folders)
